Show missing dependency warning through JS to avoid refresh flickering

--- a/static/css/mentoring.css
+++ b/static/css/mentoring.css
@@ -13,6 +13,10 @@
     background-color: #FEEFB3;
 }
 
+.mentoring .missing-dependency.warning {
+    display: none;
+}
+
 .mentoring .bold {
     font-weight: bold;
 }
